--- a/pagina-obrigado.html
+++ b/pagina-obrigado.html
@@ -31,7 +31,6 @@
             }
         }
     </script>
-
 </head>
 
 <body>
@@ -61,31 +60,33 @@
     <div class="mt-6 text-center">
         <h1 class="mt-2 mb-6 text-3xl font-semibold tracking-tight sm:text-5xl text-cor-verde">Parabéns pela sua
             escolha!</h1>
-        <h2 class="mb-6 lg:text-lg">Seu pedido foi realizado com <span class="text-cor-verde font-bold">sucesso!</span> Clique no <span class='font-bold'>botão abaixo</span> para baixar seu boleto</h2>
+        <h2 class="mb-6 lg:text-lg">Seu pedido foi realizado com <span class="text-cor-verde font-bold">sucesso!</span>
+            Clique no <span class='font-bold'>botão abaixo</span> para baixar seu boleto</h2>
     </div>
 
     <div class="mt-4">
         <button
             class="btn mb-2 p-2 text-white font-semibold bg-cor-azul flex items-center w-1/2 justify-center mx-auto rounded"
             onclick="">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m.75 12l3 3m0 0l3-3m-3 3v-6m-1.5-9H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z" />
-              </svg>              
-        BAIXAR BOLETO
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="w-6 h-6 mr-2">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                    d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m.75 12l3 3m0 0l3-3m-3 3v-6m-1.5-9H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z" />
+            </svg>
+            BAIXAR BOLETO
         </button>
     </div>
 
-    <!-- QR Code e 4 passos -->
-    <div class="text-center bg-cor-cinza">
-        <img src="./assets/boleto-logo.png" class="w-24 h-24 mx-auto mt-6 mb-1 p-1" alt="Logo do Boleto">
+    <div class="text-center">
+        <img src="./assets/boleto-logo.png" class="w-24 h-24 mx-auto mt-8 p-1" alt="Logo do Boleto">
 
-        <!-- 4 passos -->
-        <div class="mt-4 bg-white p-1">
-            <h5 class="text-2xl mt-5 mb-4 px-4 md:px-0">
+        <div class="mt-6 bg-white">
+            <h5 class="text-2xl mt-5 px-4 md:px-0">
                 Pagamento por <span class="font-bold"> Boleto Bancário</span>
             </h5>
             <p class="mt-4 text-xl" style="font-size: 15px;">
-                *Após o pagamento realizado, você receberá um e-mail em <b>breno@gmail.com </b>informando os detalhes do seu pedido.
+                *Após o pagamento realizado, você receberá um e-mail em <b>breno@gmail.com </b>informando os detalhes do
+                seu pedido.
             </p>
         </div>
     </div>
@@ -94,7 +95,7 @@
     <div class="container mt-4 bg-cor-cinza">
         <div class="row justify-content-center">
             <div class="col-lg-12 mt-5 mb-4 justify-end">
-                <div class="col-lg-6 d-flex justify-content-end justify-content-mobile mb-5 d-none-desktop">
+                <div class="col-lg-6 d-flex justify-content-end mb-5">
                     <!-- Botão WhatsApp -->
                     <div class="mt-4 p-5">
                         <div class="flex justify-center sm:justify-end">
@@ -114,12 +115,11 @@
                         <h4 class="font-bold text-cor-azulEscuro text-2xl sm:text-3xl">
                             Detalhes
                         </h4>
-                    
+
                         <h4 class="text-cor-preto text-xl sm:text-2xl">
                             Pedido nº 1901218
                         </h4>
                     </div>
-                    
                 </div>
 
                 <div class="col-lg-6 pl-7 mb-5 bg-white p-4">
@@ -155,20 +155,20 @@
                                                 Quantidade: 1
                                             </h5>
                                             <h4>
-                                                Valor total: R$ 49,90
-                                            </h4>
-                                        </div>
+                                            Valor total: R$ 49,90
+                                        </h4>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
+        </div>
+    </div>    
 
-            <script src="./js/timer.js"></script>
-            <script src="./js/copy-code.js"></script>
+    <script src="./js/timer.js"></script>
+    <script src="./js/copy-code.js"></script>
 </body>
 
 </html>
