--- a/pagina-obrigado.html
+++ b/pagina-obrigado.html
@@ -66,7 +66,7 @@
 
     <div class="mt-4">
         <button
-            class="btn mb-2 p-2 text-white font-semibold bg-cor-azul flex items-center w-1/2 justify-center mx-auto rounded"
+            class="btn mb-2 p-2 text-white font-semibold bg-cor-azul drop-shadow-[0_4px_3px_rgba(0,0,0,0.25)] flex items-center w-72 justify-center mx-auto rounded"
             onclick="">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                 stroke="currentColor" class="w-6 h-6 mr-2">
