--- a/pagina-obrigado.html
+++ b/pagina-obrigado.html
@@ -40,7 +40,7 @@
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-5">
                 <!-- Referência do JS para reconhecer a logo do cliente -->
                 <a href="javascript:void(0)" class="flex items-center">
-                    <img src="./assets/logo-shop.png" class="w-16 h-16 mr-3" alt="Imagem do logotipo da loja" />
+                    <img src="./assets/logo-shop.png" class="w-16 h-16 mr-3 items-center" alt="Imagem do logotipo da loja" />
                 </a>
                 <div class="md:block md:w-auto" id="navbar-default">
                     <ul class="font-semibold flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 md:mt-0">
@@ -64,22 +64,20 @@
             Clique no <span class='font-bold'>botão abaixo</span> para baixar seu boleto</h2>
     </div>
 
-    <div class="mt-4">
-        <button
-            class="btn mb-2 p-2 text-white font-semibold bg-cor-azul drop-shadow-[0_4px_3px_rgba(0,0,0,0.25)] flex items-center w-72 justify-center mx-auto rounded"
-            onclick="">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                stroke="currentColor" class="w-6 h-6 mr-2">
-                <path stroke-linecap="round" stroke-linejoin="round"
-                    d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m.75 12l3 3m0 0l3-3m-3 3v-6m-1.5-9H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z" />
-            </svg>
-            BAIXAR BOLETO
-        </button>
-    </div>
-
     <div class="text-center">
         <img src="./assets/boleto-logo.png" class="w-24 h-24 mx-auto mt-8 p-1" alt="Logo do Boleto">
-
+        <div class="mt-4">
+            <button
+                class="btn mb-2 p-2 text-white font-semibold bg-cor-azul drop-shadow-[0_4px_3px_rgba(0,0,0,0.25)] flex items-center w-72 justify-center mx-auto rounded"
+                onclick="">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="w-6 h-6 mr-2">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m.75 12l3 3m0 0l3-3m-3 3v-6m-1.5-9H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z" />
+                </svg>
+                BAIXAR BOLETO
+            </button>
+        </div>
         <div class="mt-6 bg-cor-cinza">
             <h5 class="text-2xl mt-5 px-4 md:px-0">
                 Pagamento por <span class="font-bold"> Boleto Bancário</span>
