--- a/pagina-obrigado.html
+++ b/pagina-obrigado.html
@@ -2,7 +2,6 @@
 <html lang="pt-br">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,6 +30,7 @@
             }
         }
     </script>
+    <script src="./js/main.js"></script>
 </head>
 
 <body>
