--- a/pagina-obrigado.html
+++ b/pagina-obrigado.html
@@ -8,6 +8,7 @@
     <!-- Mudar a URL com a automação necessária -->
     <title>Página de obrigado</title>
     <link rel="shortcut icon" href="./assets/favicon-istpay.png" type="image/x-icon">
+    <link rel="stylesheet" href="./style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -37,7 +38,7 @@
     <header>
         <!-- Cor de fundo do navbar -->
         <nav class="bg-istpay-laranja">
-            <div class="max-w-screen-xl flex flex-wrap justify-between items-center mx-auto p-5">
+            <div class="max-w-screen-xl flex flex-wrap justify-between items-center mx-auto p-5 animated-text">
                 <!-- Referência do JS para reconhecer a logo do cliente -->
                 <a href="javascript:void(0)">
                     <img src="./assets/istpay-logo-branca-quadrada.png" class="w-16 h-16 mr-3" alt="Imagem do logotipo da loja" />
@@ -54,17 +55,17 @@
 
     <!-- Título, subtítulo com timer e botão de baixar boleto -->
     <div class="mt-6 text-center">
-        <h1 class="mt-2 mb-6 text-3xl font-semibold tracking-tight sm:text-5xl text-cor-verde">Parabéns pela sua
+        <h1 class="mt-2 mb-6 text-3xl font-semibold tracking-tight sm:text-5xl text-cor-verde animated-text">Parabéns pela sua
             escolha!</h1>
-        <h2 class="mb-6 lg:text-lg">Seu pedido foi realizado com <span class="text-cor-verde font-bold">sucesso!</span>
+        <h2 class="mb-6 lg:text-lg animated-text">Seu pedido foi realizado com <span class="text-cor-verde font-bold">sucesso!</span>
             Clique no <span class='font-bold'>botão abaixo</span> para baixar seu boleto</h2>
     </div>
 
     <div class="text-center">
-        <img src="./assets/boleto-logo.png" class="w-24 h-24 mx-auto mt-8 p-1" alt="Logo do Boleto">
+        <img src="./assets/boleto-logo.png" class="w-24 h-24 mx-auto mt-8 p-1 animated-text" alt="Logo do Boleto">
         <div class="mt-4">
             <button
-                class="btn mb-2 p-2 text-white font-semibold bg-cor-azul drop-shadow-[0_4px_3px_rgba(0,0,0,0.25)] flex items-center w-72 justify-center mx-auto rounded"
+                class="btn mb-2 p-2 text-white font-semibold bg-cor-azul drop-shadow-[0_4px_3px_rgba(0,0,0,0.25)] flex items-center w-72 justify-center mx-auto rounded animated-text"
                 onclick="">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                     stroke="currentColor" class="w-6 h-6 mr-2">
@@ -75,10 +76,10 @@
             </button>
         </div>
         <div class="mt-6 bg-cor-cinza">
-            <h5 class="text-2xl mt-5 px-4 md:px-0">
+            <h5 class="text-2xl mt-5 px-4 md:px-0 animate-slide-left">
                 Pagamento por <span class="font-bold"> Boleto Bancário</span>
             </h5>
-            <p class="mt-4 text-xl" style="font-size: 15px;">
+            <p class="mt-4 text-xl animate-slide-right" style="font-size: 15px;">
                 *Após o pagamento realizado, você receberá um e-mail em <b>breno@gmail.com </b>informando os detalhes do
                 seu pedido.
             </p>
@@ -86,7 +87,7 @@
     </div>
 
     <!-- Botão WhatsApp -->
-    <div class="mt-4 mb-2 p-5 flex justify-center sm:justify-end">
+    <div class="mt-4 mb-2 p-5 flex justify-center sm:justify-end animate-slide-left">
         <a href="https://api.whatsapp.com/send?phone=31971274471" target="_blank"
             class="inline-flex items-center px-4 py-2 border border-cor-verde rounded-md font-semibold text-cor-verde focus:outline-none focus:ring-white ml-2">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-7" fill="currentColor" style="color: #05a93d;"
@@ -99,7 +100,7 @@
     </div>
 
     <!-- Detalhes e pedido -->
-    <div class="flex justify-between items-center mx-6 sm:mx-20 mb-2 sm:mb-5">
+    <div class="flex justify-between items-center mx-6 sm:mx-20 mb-2 sm:mb-5 animate-slide-right">
         <h4 class="font-bold text-cor-azulEscuro text-2xl sm:text-3xl">
             Detalhes
         </h4>
@@ -109,7 +110,7 @@
         </h4>
     </div>
 
-    <div class="col-lg-6 pl-7 mb-5 p-4">
+    <div class="col-lg-6 pl-7 mb-5 p-4 animated-text">
         <h5 class="text-lg sm:text-xl">
             Compra realizada: <span class="font-bold">Produto teste - Opção A</span>
         </h5>
